--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -18,14 +18,7 @@
   }
 }
 
-p.intro {
-  padding: 0 20px 0 20px;
-  color: $body-color;
-  font-weight: bold;
-}
-
 .more-studies {
-  //@include border-dots;
   text-align: center;
   padding-top: 2em;
 }
